# agent_ai_audit_projet

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_PYPI.md  app.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: publish.yml
components/folder_picker/: index.html
config/: settings.py
core/: ingestion.py  prompts.py
services/: gemini_client.py  pdf_generator.py
